# rusteth

./: ARCHITECTURE_REFACTORING.md  CLAUDE.md  Cargo.toml  README.md  TRANSACTION_VALIDATION_IMPLEMENTATION.md
app/node/: BUGFIX_SUMMARY.md  Cargo.toml  DISCV5_README.md  HOW_TO_TEST_DISCOVERY.md  README.md  STATIC_DISPATCH.md  test_eip1474.sh
app/node/dev/: task.md
app/node/docs/: flow.md
app/node/docs/beacon/: BEACON_API_IMPLEMENTATION_STATUS.md  BEACON_API_QUICK_REFERENCE.md  ETHEREUM_BEACON_API_STANDARDS.md
app/node/docs/execution/: API_IMPLEMENTATION_STATUS.md  ETHEREUM_API_STANDARDS.md  ETH_API_CLIENT.md  ETH_API_CLIENT_SUMMARY.md  QUICK_API_REFERENCE.md
app/node/docs/node/: DEVP2P_RLPX_PROTOCOL.md  ETH_PROTOCOL.md  NODE_DISCOVERY_PROTOCOLS.md  P2P_COMMUNICATION_STANDARDS.md  README.md  SNAP_PROTOCOL.md
app/node/docs/task/: task.md
app/node/examples/: debug_rpc_response.rs  discv5_custom_nodes.rs  discv5_example.rs  discv5_local_node.rs  discv5_with_real_bootnodes.rs  eth_api_client_usage.rs  revmdemo.rs
app/node/src/: lib.rs  main.rs
app/node/src/domain/: block_types.rs  command_dispatcher.rs  command_handler.rs  command_repository.rs  command_types.rs  commands.rs  entity_types.rs  mod.rs  receipt_types.rs  single_command_handler.rs
app/node/src/inbound/: EngineAPI.rs  client.rs  command_mapper.rs  eth_api_impl.rs  eth_api_trait.rs  json_rpc.rs  json_rpc_trait.rs  json_types.rs  jsonrpc.rs  mod.rs  result_mapper.rs  server.rs  test.rs  transaction_decoder.rs
app/node/src/infrastructure/: eth_api_client.rs  eth_api_client_test.rs  handler_repository.rs  in_memory_command_repository.rs  json_rpc_trait.rs  mock_repository.rs  mod.rs  transaction_repo_impl.rs
app/node/src/service/: block_production_service.rs  block_trait.rs  blockchain_impl.rs  build_block_impl.rs  build_block_trait.rs  command_dispatcher.rs  ethereum_service.rs  ethereum_service_impl.rs  mod.rs  transaction_validator.rs  transaction_validator_trait.rs  types.rs
app/node/src/service/repo/: block_repo.rs  command_repo.rs  mod.rs  transaction_repo.rs
app/node/tests/: README.md  TESTING_GUIDE.md  eip1559_integration_tests.rs  eth_api_client_test.rs
lib/: BEACON_API_SERVER.md  BEACON_SERVER.md  Cargo.toml
lib/examples/: beacon_api_server_usage.md  beacon_server_mock.rs  beacon_server_proxy.rs
lib/src/: lib.rs
lib/src/adapter/: beacon_api_types.rs  mod.rs
lib/src/adapter/inbound/: beacon_api_server.rs  mod.rs
lib/src/adapter/outbound/: beacon_api_client.rs  mod.rs
lib/src/domain/: mod.rs
lib/src/domain/service/: beacon_api.rs  beacon_api_service.rs  mod.rs
lib/tests/: README.md  beacon_api_integration_tests.rs
