[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步 trait 支持
async-trait = "0.1"

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "gzip"] }
