[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime - optimized for low latency
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"

# HTTP server - high performance
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# JSON serialization - high performance
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum types
ethereum-types = "0.14"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
