[package]
name = "node"
version = "0.1.0"
edition = "2021"

[lib]
name = "node"
path = "src/lib.rs"

[dependencies]
# Async runtime - optimized for low latency
tokio = { version = "1.35", features = ["full", "tracing"] }
async-trait = "0.1"

# HTTP server - high performance
axum = { version = "0.7", features = ["json"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# JSON serialization - high performance
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Ethereum types
ethereum-types = "0.14"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client - high performance async client
reqwest = { version = "0.12", features = ["json"] }

# P2P networking - Ethereum node discovery
discv5 = "0.10.2"
enr = "0.12"
libp2p = { version = "0.54", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "identify"] }
libp2p-identity = "0.2"
rlp = "0.5"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
